K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easyshop-ingress
  namespace: easyshop-hack
  labels:
    name: easyshop-ingress
    environment: production
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - easyshop.3.81.171.157.nip.io
    secretName: easyshop-tls-secret  # Cert-Manager will manage this
  rules:
  - host: easyshop.3.81.171.157.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: easyshop-hack-service

            port:
              number: 80
